-
Type:
Bug
-
Resolution: Fixed
-
Priority:
Major - P3
-
Affects Version/s: None
-
Component/s: None
-
Fully Compatible
-
ALL
-
None
-
None
-
None
-
None
-
None
-
None
-
None
Unchecked dynamic_cast
If the dynamic_cast fails, a null pointer dereference will occur; if the dynamic_cast cannot fail, using static_cast instead offers better performance. Dynamic_cast may fail and return null if the type cast is incompatible
/src/mongo/db/modules/enterprise/src/search/mongot_cursor.cpp:100: FORWARD_NULL 121640 Dynamic cast to pointer "dynamic_cast <mongo::DocumentSourceInternalSearchMongotRemote *>(potentialSearchStage.get())" can return "NULL".
/src/mongo/db/modules/enterprise/src/search/mongot_cursor.cpp:100: FORWARD_NULL 121640 Assigning: "origSearchStage" = "dynamic_cast <mongo::DocumentSourceInternalSearchMongotRemote *>(potentialSearchStage.get())".
- is caused by
-
SERVER-62535 Add ability to return multiple cursors from a shard when seeing a search pipeline
-
- Closed
-