SERVER-64293 Fix coverity issue in mongot_cursor

GitOrigin-RevId: 68b08f13dd61c604ac7a8e4a12a331015de9bdad